--- a/DigitalGameLibrary/DigitalGameLibrary.csproj
+++ b/DigitalGameLibrary/DigitalGameLibrary.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -7,6 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ControlzEx" Version="7.0.2" />
+    <PackageReference Include="DevExpress.Xpo" Version="25.1.7" />
+    <PackageReference Include="Krypton.Toolkit" Version="100.25.11.328" />
+    <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
   </ItemGroup>
 
