--- a/DigitalGameLibrary/DigitalGameLibrary.csproj
+++ b/DigitalGameLibrary/DigitalGameLibrary.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Krypton.Toolkit" Version="100.25.11.328" />
     <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
+    <PackageReference Include="MySql.Data" Version="9.5.0" />
   </ItemGroup>
 
 </Project>
