--- a/DigitalGameLibrary/DigitalGameLibrary.csproj
+++ b/DigitalGameLibrary/DigitalGameLibrary.csproj
@@ -7,12 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ColorHelper" Version="1.8.1" />
     <PackageReference Include="ControlzEx" Version="7.0.2" />
     <PackageReference Include="DevExpress.Xpo" Version="25.1.7" />
     <PackageReference Include="Krypton.Toolkit" Version="100.25.11.328" />
     <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
-    <PackageReference Include="MySql.Data" Version="9.5.0" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
   </ItemGroup>
 
 </Project>
